<resources>

    <string name="app_name">Task List</string>
    <string name="hello_world">avi nimni!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_task_list">2 DO</string>
    <string name="button">press me</string>
    <string name="buttonAdd">Add task</string>
    <string name="AddTaskLabel">task/:</string>
    <string name="task">Task</string>
    <string name="discription">Discription</string>
    <string name="addbutton">Add</string>
    <string name="removebutton">Remove selected</string>
    <string name="tashnamehint">Task name</string>
    <string name="taskdischint">Task discription</string>
    <string name="delTask">Delete</string>

</resources>