<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTaskName"
        android:ems="10"
        android:hint="@string/tashnamehint"
        android:inputType="text"
        android:label="@string/AddTaskLabel" >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/textViewTaskDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextTaskName"
        android:text="@string/discription"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextTaskDisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTaskDisc"
        android:ems="10"
        android:hint="@string/taskdischint"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTaskDisc"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/textViewTaskName"
        android:text="@string/addbutton" />

    

</RelativeLayout>